tests/parser/bad/exps/exp_t-let-id-colon-tid-with.scilexp
let a : (Bool) equals True
